--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chat-app": "file:",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
-    "expo": "~51.0.37",
+    "expo": "~51.0.38",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
@@ -44,6 +44,7 @@
     "react-native": "0.74.5",
     "react-native-crypto-js": "^1.0.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
