--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/material-top-tabs": "^6.6.14",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "chat-app": "file:",
     "crypto-js": "^4.2.0",
