--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-web-browser": "~13.0.3",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.437.0",
+    "mitt": "^3.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -54,7 +55,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "socket.io-client": "^4.8.0",
+    "socket.io-client": "^4.8.1",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
