--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.13",
     "expo": "~51.0.38",
     "expo-blur": "~13.0.2",
+    "expo-checkbox": "^4.0.0",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-image-picker": "^15.0.7",
